--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 #headBack{
-	transform: 0.5s;
+	transition: 0.5s;
 	top: 40px;
 	position: fixed;
     width: calc(100vw - 80px);
@@ -29,6 +29,36 @@ body{
     backdrop-filter: blur(30px);
     background-color: rgba(255,255,255,0.85);
     -webkit-backdrop-filter: blur(30px);
+}
+
+#bigMenu{
+	opacity: 0;
+	transition: .4s;
+	visibility: hidden;
+	position: fixed;
+	z-index: 10;
+	top: 220px;
+	height: calc(100vh - 70px);
+	width: 100vw;
+	overflow-y: scroll;
+}
+
+
+.bigMenuButton p{
+	margin-left: 50px;
+	margin-top: 58px;
+  font-family: 'Alexandria', sans-serif;
+  font-size: 52px;
+  float: left;
+}
+.bigMenuButton{
+	width: calc(100vw - 80px);
+    height: 180px;
+	margin-top: 40px;
+	margin-left: 40px;
+	background-color: rgba(0,0,0,0.09);
+	border-radius: 50px;
+	padding-top: 1px;
 }
 
 #menuButton{
